[package]
name = "network-tables"
version = "0.0.0"
edition = "2021"
description = "A implementation of WPI's Network Tables spec"
license = "MIT"
repository = "https://github.com/tsar-boomba/network-tables-rs"
homepage = "https://github.com/tsar-boomba/network-tables-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp = "0.8.8"
rmp-serde = "1.1.1"
rmpv = { version = "1.0", features = ["with-serde"] }
tokio = { version = "1.23.0", features = ["rt", "sync", "net", "time", "macros", "rt-multi-thread", "parking_lot"] }
tokio-tungstenite = { version = "0.18.0" }
serde = { version = "1", features = ["derive"] }
parking_lot = "0.12.1"
serde_json = "1"
futures-util = "0.3.25"
thiserror = "1.0.38"

# tracing
tracing = { version = "0.1", optional = true }

# bin
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
rand = "0.8.5"

[features]
default = ["tracing"]
tracing = ["dep:tracing"]
rustls = ["tokio-tungstenite/rustls"]
native-tls = ["tokio-tungstenite/native-tls"]
client-v4 = []

[package.metadata.release]
pre-release-hook = ["./tools/changelog.sh"]
