[package]
name = "network-tables"
version = "0.0.10"
edition = "2021"
description = "A implementation of WPI's Network Tables spec"
license = "MIT"
repository = "https://github.com/tsar-boomba/network-tables-rs"
homepage = "https://github.com/tsar-boomba/network-tables-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24", features = ["rt", "sync", "net", "time", "macros", "parking_lot"] }
parking_lot = "0.12.1"
futures-util = "0.3.25"
thiserror = "1.0.38"
rand = "0.8.5"

# v4 implementation
rmp = { version = "0.8", optional = true }
rmp-serde = { version = "1.1.1", optional = true }
rmpv = { version = "1.0", features = ["with-serde"], optional = true }
serde_json = { version = "1", optional = true }
tokio-tungstenite = { version = "0.18.0", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

# tracing
tracing = { version = "0.1", optional = true }

# v3 implementation
bytes = { version = "1.3", optional = true }
leb128 = { version = "0.2.5", optional = true }

[features]
default = ["tracing"]
tracing = ["dep:tracing"]
v4-rustls = ["tokio-tungstenite/rustls"]
v4-native-tls = ["tokio-tungstenite/native-tls"]
__v4 = ["tokio-tungstenite", "dep:rmpv", "dep:rmp-serde", "dep:rmp", "dep:serde", "dep:serde_json"]
client-v4 = ["__v4"]
server-v4 = ["__v4"]
__v3 = ["dep:bytes", "dep:leb128"]
client-v3 = ["__v3"]

[package.metadata.release]
pre-release-hook = ["./tools/changelog.sh"]
