[package]
name = "client-v4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["rt", "sync", "net", "time", "macros", "rt-multi-thread", "parking_lot"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
network-tables = { path = "../../", features = ["client-v4"] }
